[package]
name = "close_smooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal = "0.3.2"
once_cell = "1.17.1"
integer-sqrt = "0.1.5"
rayon = "1.7.0"
rand = "0.8.5"
average = "0.13.1"
#plotters = "0.3.4"

[profile.release]
lto = true
codegen-units = 1

[workspace]
